tweaks to simplify code for removal of selections by using array index

--- a/public/templates/components/forms-multiselect.handlebars
+++ b/public/templates/components/forms-multiselect.handlebars
@@ -1,4 +1,4 @@
-{{forms-input 
+{{input 
   type="text"
   value=search
   enter="addSelection"
@@ -23,5 +23,3 @@
   <li {{action "removeSelection" this}}>{{value}}</li>
   {{/each}}
 </ul>
-
-<button {{action "serialize" widget}}>Serialize</button>
