--- a/public/stylesheets/index.less
+++ b/public/stylesheets/index.less
@@ -28,14 +28,6 @@ li {
   margin: 0px;
 }
 
-.left-column {
-  .make-sm-column(3, 0px);
-}
-
-.right-column {
-  .make-sm-column(3, 0px);
-}
-
 .ms-wrapper {
   width: 90%;
   input.ms-input {
@@ -45,6 +37,10 @@ li {
     width: 100%;
     .ms-match {
       .size(100%, 32px);
+      .text-overflow();
+      border-bottom: 1px solid @gray;
+      border-left: 1px solid @gray;
+      border-right: 1px solid @gray;
       padding-top: .2em;
       font-size: 1.2em;
       padding-left: 12px;
@@ -63,17 +59,27 @@ li {
   .ms-tags {
     min-height: 32px;
     background-color: @light-gray;  
-    padding: 4px;
     .ms-tag {
+      position: relative;
       display: inline-block;
-      height: 24px;
-      max-width: 90%
+      height: 26px;
+      max-width: 94%;
       line-height: 24px;
       padding-left: 4px;
       padding-right: 4px;
-      text-align: bottom;
+      margin: 3px;
       color: white;
-      background-color: gray;
+      background: gray;
+      .ms-value {
+        .text-overflow();
+        display: inline-block;
+        width: 90%;
+      }
+      i {
+        position: absolute;
+        top: 4px;
+        right: 8px;
+      }
     }
     .ms-no-tag {
       height: 24px;
