--- a/public/templates/application.handlebars
+++ b/public/templates/application.handlebars
@@ -2,4 +2,11 @@
   classNames="ms-wrapper"
   candidates=candidates 
   placeholder="Choose a game"
+  values=games
   name="games"}}
+
+<ul>
+  {{#each games}}
+    <li>{{value}}</li> 
+  {{/each}}
+</ul>
