--- a/views/index.jade
+++ b/views/index.jade
@@ -46,6 +46,7 @@ html(lang=en)
         .col-sm-3
           #react
             h2 react.js
+            #reactRoot
 
         .col-sm-3
           #ember
@@ -58,5 +59,6 @@ html(lang=en)
     script(src="/vendor/jquery.js")
     script(src="/vendor/handlebars.js")
     script(src="/vendor/ember.js")
+    script(src="/vendor/react.js")
     script(src="/dist/templates.js")
     script(src="/dist/components.js")
