multiselect has addActiveSelection function.  refactored main.js to be a more consistent bootstrapping and app setup phase

--- a/public/templates/application.handlebars
+++ b/public/templates/application.handlebars
@@ -1,6 +1,5 @@
 {{forms-multiselect 
   classNames="ms-wrapper"
-  candidates=candidates 
   placeholder="Choose a game"
-  values=games
-  name="games"}}
+  widget=widget
+  values=games}}
