--- a/views/timestamps.jade
+++ b/views/timestamps.jade
@@ -6,7 +6,7 @@ html(lang=en)
   body
     .video-container
       iframe.player(
-        src="//www.youtube.com/embed/LEc3gMjhF44?rel=0", 
+        src="//www.youtube.com/embed/8CkxN25GhHE?rel=0", 
         frameborder="0",
         allowfullscreen)
 
@@ -53,7 +53,7 @@ html(lang=en)
             span videos
           .contents
             iframe.video-thumbnail(
-              src="//www.youtube.com/embed/LEc3gMjhF44?rel=0", 
+              src="//www.youtube.com/embed/C1tWgWVSLAY?rel=0", 
               frameborder="0",
               allowfullscreen)
 
@@ -62,4 +62,4 @@ html(lang=en)
             i.glyphicon.glyphicon-shopping-cart
             span products
           .contents
-            img.thumbnail(src="http://static-cdn.jtvnw.net/jtv_user_pictures/panel-10332629-image-c54e8750e40b3dcc-320.jpeg")
+            img.thumbnail(src="https://slm-assets2.secondlife.com/assets/7060694/lightbox/Wrap_Front_Roll_Neck_Cropped_Sweater.jpg?1359472383")
