--- a/public/stylesheets/index.less
+++ b/public/stylesheets/index.less
@@ -119,7 +119,7 @@ li {
       background-color: @yt-lightgray;
       .translate(630px, 0px);
       &.active {
-        .animation(slide 30s linear infinite);
+        .animation(slide 109s linear infinite);
       }
     }
     .timeline-container {
@@ -147,12 +147,20 @@ li {
     height: 200px;
     .active-comment-container {
       padding: 10px;
+      width: 33.33%;
+      float: left;
+      display: inline-block;
+
       .title {
-        margin-bottom: 10px;
-        color: white;
-        text-align: center;
+        display: block;
         padding: 4px;
-        text-transform: uppercase;
+        text-align: center;
+        color: white;
+        height: 40px;
+        padding-top: 10px;
+        border: none !important;
+        margin-bottom: 0px;
+        font-size: 16px;
         i {
           margin-right: 4px;
         }
@@ -166,26 +174,24 @@ li {
           background-color: @products-color;
         }
       }
-      display: inline-block;
-      float: left;
-      color: white;
-      width: 33.33%;
-      .title {
-        display: block;
-        height: 40px;
-        padding-top: 10px;
-        border: none !important;
-        margin-bottom: 0px;
-        font-size: 16px;
-      }
       .contents {
         height: 125px;
-        width: 100%;
         background-color: white;
         padding: 4px;
         color: @yt-gray;
         overflow: hidden;
-        transition: content 2s ease;
+        opacity: 1.0;
+        .transition(opacity .3s ease-in-out);
+        &.comments {
+          .animation(comment-timeline 109s linear infinite);
+        }
+        &.videos {
+          .animation(video-timeline 109s linear infinite);
+        }
+        &.products {
+          .animation(product-timeline 109s linear infinite);
+        }
+
         p {
           margin: 10px; 
         }
@@ -264,5 +270,187 @@ li {
   }
   to {
     .translate(780px, 0px);
+  }
+}
+
+@-webkit-keyframes comment-timeline {
+  0% {
+    opacity: 0.0;
+  }
+
+  10% {
+    opacity: 0.0;
+  } 
+  11% {
+    opacity: 1.0;
+  }
+
+  17% {
+    opacity: 1.0;
+  }
+  18% {
+    opacity: 0.0;
+  }
+
+  26% {
+    opacity: 0.0
+  }
+  27% {
+    opacity: 1.0;
+  }
+
+  30% {
+    opacity: 1.0;
+  }
+  31% {
+    opacity: 0.0;
+  }
+
+  50% {
+    opacity: 0.0;
+  }
+  51% {
+    opacity: 1.0;
+  }
+
+  60% {
+    opacity: 1.0;
+  }
+  61% {
+    opacity: 0.0;
+  }
+
+  82% {
+    opacity: 0.0;
+  }
+  83% {
+    opacity: 1.0;
+  }
+
+  94% {
+    opacity: 1.0;
+  }
+  95% {
+    opacity: 0.0;
+  }
+  100% {
+    opacity: 0.0;
+  }
+}
+
+@-webkit-keyframes video-timeline {
+  0% {
+    opacity: 0.0;
+  }
+
+  5% {
+    opacity: 0.0;
+  } 
+  6% {
+    opacity: 1.0;
+  }
+
+  8% {
+    opacity: 1.0;
+  }
+  9% {
+    opacity: 0.0;
+  }
+
+  60% {
+    opacity: 0.0
+  }
+  61% {
+    opacity: 1.0;
+  }
+
+  67% {
+    opacity: 1.0;
+  }
+  68% {
+    opacity: 0.0;
+  }
+
+  70% {
+    opacity: 0.0;
+  }
+  71% {
+    opacity: 1.0;
+  }
+
+  83% {
+    opacity: 1.0;
+  }
+  84% {
+    opacity: 0.0;
+  }
+  100% {
+    opacity: 0.0;
+  }
+}
+
+@-webkit-keyframes product-timeline {
+  0% {
+    opacity: 0.0;
+  }
+
+  16% {
+    opacity: 0.0;
+  } 
+  17% {
+    opacity: 1.0;
+  }
+
+  18% {
+    opacity: 1.0;
+  }
+  19% {
+    opacity: 0.0;
+  }
+
+  35% {
+    opacity: 0.0
+  }
+  36% {
+    opacity: 1.0;
+  }
+
+  41% {
+    opacity: 1.0;
+  }
+  42% {
+    opacity: 0.0;
+  }
+
+  72% {
+    opacity: 0.0;
+  }
+  73% {
+    opacity: 1.0;
+  }
+
+  77% {
+    opacity: 1.0;
+  }
+  78% {
+    opacity: 0.0;
+  }
+
+  83% {
+    opacity: 0.0;
+  }
+  84% {
+    opacity: 1.0;
+  }
+
+  89% {
+    opacity: 1.0;
+  }
+  90% {
+    opacity: 0.0;
+  }
+
+  100% {
+    opacity: 0.0;
   }
 }
