--- a/views/timestamps.jade
+++ b/views/timestamps.jade
@@ -15,29 +15,32 @@ html(lang=en)
         .timeline-container
           .midline.comments
           ul.timeline-tags
-            li.comments(style="left: 10%; width: 50px;")
-            li.comments(style="left: 25%; width: 35px;")
-            li.comments(style="left: 50%; width: 75px;")
-            li.comments(style="left: 80%; width: 100px;")
+            li.comments(style="left: 10%; width: 8%;")
+            li.comments(style="left: 26%; width: 4%;")
+            li.comments(style="left: 50%; width: 10%;")
+            li.comments(style="left: 82%; width: 12%;")
         .timeline-container
           .midline.videos
           ul.timeline-tags
-            li.videos(style="left: 5%;  width: 25px;")
-            li.videos(style="left: 60%; width: 55px;")
-            li.videos(style="left: 68%; width: 120px;")
+            li.videos(style="left: 5%;  width: 3%;")
+            li.videos(style="left: 60%; width: 7%;")
+            li.videos(style="left: 68%; width: 13%;")
         .timeline-container
           .midline.products
           ul.timeline-tags
-            li.products(style="left: 15%; width: 25px;")
-            li.products(style="left: 35%; width: 55px;")
-            li.products(style="left: 70%; width: 48px;")
-            li.products(style="left: 80%; width: 55px;")
+            li.products(style="left: 16%; width: 2%;")
+            li.products(style="left: 35%; width: 6%;")
+            li.products(style="left: 72%; width: 5%;")
+            li.products(style="left: 83%; width: 6%;")
 
       .active-comments-container
         .active-comment-container
-          .title.comments 
-            i.glyphicon.glyphicon-comment
-            span Comments
+          .header-container
+            .title.comments 
+              i.glyphicon.glyphicon-comment
+              span Comments
+            .list-button.comments
+              i#list-comments.glyphicon.glyphicon-list
           .contents.comments
             .profile-header
               img.profile-image(src="https://lh4.googleusercontent.com/-M3QZzLiIxo4/AAAAAAAAAAI/AAAAAAAAA6E/SaHmuMf9Ekg/s24-c-k-no/photo.jpg")
@@ -47,9 +50,12 @@ html(lang=en)
             p blah blah blah I have so much to say you guys this is really great that I have this platform to voice my opinions on!
             
         .active-comment-container
-          .title.videos
-            i.glyphicon.glyphicon-film
-            span Videos
+          .header-container
+            .title.videos
+              i.glyphicon.glyphicon-film
+              span Videos
+            .list-button.videos
+              i#list-videos.glyphicon.glyphicon-list
           .contents.videos
             iframe.video-thumbnail(
               src="//www.youtube.com/embed/C1tWgWVSLAY?rel=0", 
@@ -57,9 +63,12 @@ html(lang=en)
               allowfullscreen)
 
         .active-comment-container
-          .title.products
-            i.glyphicon.glyphicon-shopping-cart
-            span Products
+          .header-container
+            .title.products
+              i.glyphicon.glyphicon-shopping-cart
+              span Products
+            .list-button.products
+              i#list-products.glyphicon.glyphicon-list
           .contents.products
             img.thumbnail(src="https://slm-assets2.secondlife.com/assets/7060694/lightbox/Wrap_Front_Roll_Neck_Cropped_Sweater.jpg?1359472383")
 
